A new smell appeared out of nowwhere…